--- a/Configurator.UI/src/client-app/localization/en/Columns.json
+++ b/Configurator.UI/src/client-app/localization/en/Columns.json
@@ -107,5 +107,6 @@
   "CustomText__Value": "Value",
   "ParameterRequestDTO__ParameterTypeId": "Parameter type id",
   "ParameterRequestDTO__Type": "Type",
-  "ModuleRequestDTO__Replace": "Replace"
+  "ModuleRequestDTO__Replace": "Replace",
+  "Tenant__LogoFile": "Logo file"
 }
